# PEP 518: https://www.python.org/dev/peps/pep-0518/

[tool.isort]
profile = "black"

[tool.poetry]
name = "wapi2nsconf"
version = "0.3.0"
description = "Infoblox WAPI to DNS server configuration tool"
authors = ["Jakob Schlyter <jakob@kirei.se>"]
license = "BSD"

[tool.poetry.scripts]
wapi2nsconf = "wapi2nsconf.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
PyYAML = "^5.3.1"
urllib3 = "^1.26.2"
voluptuous = "^0.12.0"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest-black = "^0.3.12"
isort = "^5.6.4"
pytest-isort = "^1.2.0"
pytest = "^6.1.2"
pylama = "^7.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
