# PEP 518: https://www.python.org/dev/peps/pep-0518/

[tool.isort]
profile = "black"

[tool.poetry]
name = "wapi2nsconf"
version = "0.4.1"
description = "Infoblox WAPI to DNS server configuration tool"
authors = ["Jakob Schlyter <jakob@kirei.se>"]
license = "BSD"
repository = "https://github.com/kirei/wapi2nsconf"
readme = "README.md"

[tool.poetry.scripts]
wapi2nsconf = "wapi2nsconf.cli:main"
wapi2catz = "wapi2nsconf.catz:main"

[tool.poetry.dependencies]
Jinja2 = "^3.0.3"
python = "^3.7"
PyYAML = "^6"
requests = "^2.25.0"
urllib3 = "^1.26.2"
voluptuous = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pylama = "^8.4.1"
pytest = "^6.1.2"
pytest-black = "^0.3.12"
pytest-isort = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylama.linter.pycodestyle]
max_line_length = 132
ignore = "W606"

[tool.pylama.linter.mccabe]
complexity = 40

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true
